fix navbar on mobile

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -43,6 +43,7 @@ nav ul {
 
 nav ul li {
     padding: 15px;
+    transition-property: translate;
     transition-duration: 0.2s;
 }
 nav ul li:hover {
@@ -110,6 +111,9 @@ footer #footer-upper ul {
     }
 }
 @media (max-width: 700px) {
+    nav ul li:hover {
+        translate: 0px;
+    }
     #main-logo {
         margin-top: 0px;
     }
